feat: patch /clothes/:id API done and update swagger document
